fix: apply 17 code review improvements across backend and frontend