@@ -6,6 +6,7 @@ import com.cdcp.backend.entity.User;
 import com.cdcp.backend.repository.ApplicationRepository;
 import com.cdcp.backend.repository.JobRepository;
 import com.cdcp.backend.repository.UserRepository;
+import com.cdcp.backend.service.AuthService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -18,26 +19,15 @@ import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/admin")
-@CrossOrigin(origins = {"http://localhost:5173", "http://localhost:5174"})
 public class AdminController {
 
     @Autowired private UserRepository userRepository;
     @Autowired private JobRepository jobRepository;
     @Autowired private ApplicationRepository applicationRepository;
-
-    private User getUserFromToken(String authHeader) {
-        if (authHeader == null || !authHeader.startsWith("Bearer ")) return null;
-        String token = authHeader.substring(7);
-        int lastDash = token.lastIndexOf("-");
-        if (lastDash == -1) return null;
-        try {
-            Long userId = Long.parseLong(token.substring(lastDash + 1));
-            return userRepository.findById(userId).orElse(null);
-        } catch (NumberFormatException e) { return null; }
-    }
+    @Autowired private AuthService authService;
 
     private boolean isAdmin(String authHeader) {
-        User u = getUserFromToken(authHeader);
+        User u = authService.getUserFromToken(authHeader);
         return u != null && "admin".equals(u.getRole());
     }
 
@@ -49,16 +39,16 @@ public class AdminController {
         List<Job> allJobs = jobRepository.findAll();
         List<Application> allApps = applicationRepository.findAll();
 
-        long students = allUsers.stream().filter(u -> "student".equals(u.getRole())).count();
+        long students  = allUsers.stream().filter(u -> "student".equals(u.getRole())).count();
         long companies = allUsers.stream().filter(u -> "company".equals(u.getRole())).count();
-        long accepted = allApps.stream().filter(a -> "ACCEPTED".equals(a.getStatus()) || "SELECTED".equals(a.getStatus())).count();
+        long accepted  = allApps.stream().filter(a -> "ACCEPTED".equals(a.getStatus()) || "SELECTED".equals(a.getStatus())).count();
 
         Map<String, Object> stats = new HashMap<>();
-        stats.put("totalStudents", students);
-        stats.put("totalCompanies", companies);
-        stats.put("totalJobs", allJobs.size());
+        stats.put("totalStudents",     students);
+        stats.put("totalCompanies",    companies);
+        stats.put("totalJobs",         allJobs.size());
         stats.put("totalApplications", allApps.size());
-        stats.put("totalPlacements", accepted);
+        stats.put("totalPlacements",   accepted);
 
         return ResponseEntity.ok(stats);
     }
@@ -69,9 +59,13 @@ public class AdminController {
 
         List<Map<String, Object>> users = userRepository.findAll().stream().map(u -> {
             Map<String, Object> m = new HashMap<>();
-            m.put("id", u.getId()); m.put("email", u.getEmail()); m.put("role", u.getRole());
-            m.put("firstName", u.getFirstName()); m.put("lastName", u.getLastName());
-            m.put("department", u.getDepartment()); m.put("cgpa", u.getCgpa());
+            m.put("id",         u.getId());
+            m.put("email",      u.getEmail());
+            m.put("role",       u.getRole());
+            m.put("firstName",  u.getFirstName());
+            m.put("lastName",   u.getLastName());
+            m.put("department", u.getDepartment());
+            m.put("cgpa",       u.getCgpa());
             return m;
         }).collect(Collectors.toList());
 
@@ -83,7 +77,7 @@ public class AdminController {
         if (!isAdmin(authHeader)) return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(new ErrorResponse("Admin only"));
         if (!userRepository.existsById(id)) return ResponseEntity.status(HttpStatus.NOT_FOUND).body(new ErrorResponse("User not found"));
         userRepository.deleteById(id);
-        return ResponseEntity.ok(new ErrorResponse("User deleted"));
+        return ResponseEntity.ok(new MessageResponse("User deleted"));
     }
 
     @GetMapping("/applications")
@@ -96,9 +90,10 @@ public class AdminController {
     public ResponseEntity<?> getCompanyStats(@RequestHeader("Authorization") String authHeader) {
         if (!isAdmin(authHeader)) return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(new ErrorResponse("Admin only"));
 
-        List<Application> apps = applicationRepository.findAll();
-        Map<String, Long> companyWise = apps.stream()
-                .collect(Collectors.groupingBy(a -> a.getCompany() != null ? a.getCompany() : "Unknown", Collectors.counting()));
+        Map<String, Long> companyWise = applicationRepository.findAll().stream()
+                .collect(Collectors.groupingBy(
+                        a -> a.getCompany() != null ? a.getCompany() : "Unknown",
+                        Collectors.counting()));
 
         return ResponseEntity.ok(companyWise);
     }
@@ -106,60 +101,73 @@ public class AdminController {
     @GetMapping("/reports/department")
     public ResponseEntity<?> getDepartmentReports(@RequestHeader("Authorization") String authHeader) {
         if (!isAdmin(authHeader)) return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(new ErrorResponse("Admin only"));
-        
-        List<User> students = userRepository.findAll().stream().filter(u -> "student".equals(u.getRole())).collect(Collectors.toList());
+
+        List<User> students = userRepository.findAll().stream()
+                .filter(u -> "student".equals(u.getRole()))
+                .collect(Collectors.toList());
         List<Application> apps = applicationRepository.findAll();
-        
+
         Map<String, Map<String, Object>> deptStats = new HashMap<>();
-        
+
         for (User student : students) {
-            String dept = student.getDepartment();
-            if (dept == null || dept.trim().isEmpty()) dept = "Unknown";
-            
+            String dept = (student.getDepartment() == null || student.getDepartment().isBlank())
+                    ? "Unknown" : student.getDepartment();
+
             deptStats.putIfAbsent(dept, new HashMap<>(Map.of("totalStudents", 0, "placedStudents", 0)));
             Map<String, Object> stats = deptStats.get(dept);
-            stats.put("totalStudents", (int)stats.get("totalStudents") + 1);
-            
-            boolean isPlaced = apps.stream().anyMatch(a -> a.getStudentId().equals(student.getId()) && ("SELECTED".equals(a.getStatus()) || "ACCEPTED".equals(a.getStatus())));
-            if (isPlaced) {
-                stats.put("placedStudents", (int)stats.get("placedStudents") + 1);
-            }
+            stats.put("totalStudents", (int) stats.get("totalStudents") + 1);
+
+            boolean placed = apps.stream().anyMatch(a ->
+                    a.getStudentId().equals(student.getId()) &&
+                    ("SELECTED".equals(a.getStatus()) || "ACCEPTED".equals(a.getStatus())));
+            if (placed) stats.put("placedStudents", (int) stats.get("placedStudents") + 1);
         }
-        
+
         for (Map.Entry<String, Map<String, Object>> entry : deptStats.entrySet()) {
             Map<String, Object> stats = entry.getValue();
-            int total = (int)stats.get("totalStudents");
-            int placed = (int)stats.get("placedStudents");
-            double percentage = total == 0 ? 0.0 : ((double)placed / total) * 100.0;
-            stats.put("placementPercentage", percentage);
+            int total  = (int) stats.get("totalStudents");
+            int placed = (int) stats.get("placedStudents");
+            stats.put("placementPercentage", total == 0 ? 0.0 : ((double) placed / total) * 100.0);
             stats.put("department", entry.getKey());
         }
-        
+
         return ResponseEntity.ok(deptStats.values());
     }
 
     @GetMapping("/reports/student")
     public ResponseEntity<?> getStudentReports(@RequestHeader("Authorization") String authHeader) {
         if (!isAdmin(authHeader)) return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(new ErrorResponse("Admin only"));
-        
-        List<User> students = userRepository.findAll().stream().filter(u -> "student".equals(u.getRole())).collect(Collectors.toList());
+
+        List<User> students = userRepository.findAll().stream()
+                .filter(u -> "student".equals(u.getRole()))
+                .collect(Collectors.toList());
         List<Application> apps = applicationRepository.findAll();
-        
+
         List<Map<String, Object>> studentStats = students.stream().map(student -> {
-            Map<String, Object> stats = new HashMap<>();
-            stats.put("studentId", student.getId());
-            stats.put("name", student.getFirstName() + " " + student.getLastName());
-            stats.put("department", student.getDepartment());
-            
-            List<Application> studentApps = apps.stream().filter(a -> a.getStudentId().equals(student.getId())).collect(Collectors.toList());
-            stats.put("appsCount", studentApps.size());
-            
-            boolean isPlaced = studentApps.stream().anyMatch(a -> "SELECTED".equals(a.getStatus()) || "ACCEPTED".equals(a.getStatus()));
-            stats.put("status", isPlaced ? "Placed" : "Unplaced");
-            
-            return stats;
+            Map<String, Object> statsMap = new HashMap<>();
+            statsMap.put("studentId",  student.getId());
+            statsMap.put("name",       buildFullName(student));
+            statsMap.put("department", student.getDepartment());
+
+            List<Application> studentApps = apps.stream()
+                    .filter(a -> a.getStudentId().equals(student.getId()))
+                    .collect(Collectors.toList());
+            statsMap.put("appsCount", studentApps.size());
+
+            boolean placed = studentApps.stream().anyMatch(a ->
+                    "SELECTED".equals(a.getStatus()) || "ACCEPTED".equals(a.getStatus()));
+            statsMap.put("status", placed ? "Placed" : "Unplaced");
+
+            return statsMap;
         }).collect(Collectors.toList());
-        
+
         return ResponseEntity.ok(studentStats);
+    }
+
+    private String buildFullName(User user) {
+        String first = user.getFirstName() != null ? user.getFirstName().trim() : "";
+        String last  = user.getLastName()  != null ? user.getLastName().trim()  : "";
+        String full  = (first + " " + last).trim();
+        return full.isBlank() ? user.getEmail() : full;
     }
 }
